--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5d8cda93",
+   "id": "9483fc96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0e455ef9",
+   "id": "455b3eea",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f033565a",
+   "id": "cdfa4e6d",
    "metadata": {},
    "outputs": [
     {
@@ -88,11 +88,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d59426b7",
+   "id": "330a7b20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for filename in"
+    "for filename in glob.glob(\"data/*.csv\"):\n",
+    "    data = pd.read_csv(filename, index_col=\"country\")\n",
+    "    print(filename, data[\"\"])"
    ]
   }
  ],
