--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9483fc96",
+   "id": "d6f81c4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "455b3eea",
+   "id": "dfa3480f",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cdfa4e6d",
+   "id": "a97cee0f",
    "metadata": {},
    "outputs": [
     {
@@ -87,15 +87,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "330a7b20",
+   "execution_count": 6,
+   "id": "3fd96f39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/gapminder_gdp_americas.csv \t 1397.717137\n",
+      "data/gapminder_gdp_europe.csv \t 973.5331948\n",
+      "data/gapminder_all.csv \t 298.8462121\n",
+      "data/gapminder_gdp_oceania.csv \t 10039.59564\n",
+      "data/gapminder_gdp_africa.csv \t 298.8462121\n",
+      "data/gapminder_gdp_asia.csv \t 331.0\n"
+     ]
+    }
+   ],
    "source": [
     "for filename in glob.glob(\"data/*.csv\"):\n",
     "    data = pd.read_csv(filename, index_col=\"country\")\n",
-    "    print(filename, data[\"\"])"
+    "    print(filename, \"\\t\", data[\"gdpPercap_1952\"].min())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "718bd7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
