--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d6f81c4a",
+   "id": "3fe79d17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dfa3480f",
+   "id": "9a606fff",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a97cee0f",
+   "id": "0b33fe41",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
    ],
    "source": [
     "import glob\n",
-    "List_of_files = glob.glob(\"data/*.csv\")\n",
+    "List_of_files = glob.glob(\"data/*.csv\").sort()\n",
     "\n",
     "for File in List_of_files:\n",
     "    print(File)\n",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fd96f39",
+   "id": "ec378856",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "718bd7c0",
+   "id": "31d07a6c",
    "metadata": {},
    "outputs": [],
    "source": []
