--- a/Looping_over_data_sets.ipynb
+++ b/Looping_over_data_sets.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3fe79d17",
+   "id": "62f99185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a606fff",
+   "id": "ae80814f",
    "metadata": {},
    "outputs": [
     {
@@ -59,26 +59,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "0b33fe41",
+   "execution_count": 11,
+   "id": "1c7d5d78",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/gapminder_gdp_americas.csv\n",
-      "data/gapminder_gdp_europe.csv\n",
       "data/gapminder_all.csv\n",
-      "data/gapminder_gdp_oceania.csv\n",
       "data/gapminder_gdp_africa.csv\n",
-      "data/gapminder_gdp_asia.csv\n"
+      "data/gapminder_gdp_americas.csv\n",
+      "data/gapminder_gdp_asia.csv\n",
+      "data/gapminder_gdp_europe.csv\n",
+      "data/gapminder_gdp_oceania.csv\n"
      ]
     }
    ],
    "source": [
     "import glob\n",
-    "List_of_files = glob.glob(\"data/*.csv\").sort()\n",
+    "List_of_files = sorted(glob.glob(\"data/*.csv\"))\n",
     "\n",
     "for File in List_of_files:\n",
     "    print(File)\n",
@@ -87,25 +87,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ec378856",
+   "execution_count": 12,
+   "id": "5ae072a4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/gapminder_gdp_americas.csv \t 1397.717137\n",
-      "data/gapminder_gdp_europe.csv \t 973.5331948\n",
       "data/gapminder_all.csv \t 298.8462121\n",
-      "data/gapminder_gdp_oceania.csv \t 10039.59564\n",
       "data/gapminder_gdp_africa.csv \t 298.8462121\n",
-      "data/gapminder_gdp_asia.csv \t 331.0\n"
+      "data/gapminder_gdp_americas.csv \t 1397.717137\n",
+      "data/gapminder_gdp_asia.csv \t 331.0\n",
+      "data/gapminder_gdp_europe.csv \t 973.5331948\n",
+      "data/gapminder_gdp_oceania.csv \t 10039.59564\n"
      ]
     }
    ],
    "source": [
-    "for filename in glob.glob(\"data/*.csv\"):\n",
+    "for filename in sorted(glob.glob(\"data/*.csv\")):\n",
     "    data = pd.read_csv(filename, index_col=\"country\")\n",
     "    print(filename, \"\\t\", data[\"gdpPercap_1952\"].min())"
    ]
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31d07a6c",
+   "id": "9a6a7a06",
    "metadata": {},
    "outputs": [],
    "source": []
