--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -2,14 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8d0f7255",
+   "execution_count": 1,
+   "id": "7b36347e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_greetings():\n",
     "    print(\"Hello\")\n",
-    "    print(\"The weather \")"
+    "    print(\"The weather is nice today\")\n",
+    "    print(\"Right?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "51b1dc92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "The weather is nice today\n",
+      "Right?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_greetings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf418cac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_date(year, )"
    ]
   }
  ],
