--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7b36347e",
+   "id": "aec09bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "51b1dc92",
+   "id": "673c0236",
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf418cac",
+   "execution_count": 3,
+   "id": "44493a63",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_date(year, )"
+    "def print_date(year, month, day):\n",
+    "    joined = str(year) + \"/\" + str(month) + \"/\" + str(day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "911dc4d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pri"
    ]
   }
  ],
