--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aec09bad",
+   "id": "b1c04130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "673c0236",
+   "id": "d0ea235b",
    "metadata": {},
    "outputs": [
     {
@@ -35,24 +35,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "44493a63",
+   "execution_count": 8,
+   "id": "d251f1b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_date(year, month, day):\n",
-    "    joined = str(year) + \"/\" + str(month) + \"/\" + str(day)"
+    "    joined = str(year) + \"/\" + str(month) + \"/\" + str(day)\n",
+    "    print(joined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9cbd8da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1871/3/19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_date(1871, 3 , 19)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "911dc4d9",
+   "id": "e2c49aa8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pri"
-   ]
+   "source": []
   }
  ],
  "metadata": {
