--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1c04130",
+   "id": "d0d052ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0ea235b",
+   "id": "30f56d02",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d251f1b8",
+   "id": "2d557052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e9cbd8da",
+   "id": "ee8d2421",
    "metadata": {},
    "outputs": [
     {
@@ -65,8 +65,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "0c4f3a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1871/3/19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_date(month=3, day=19, year=1871)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e2c49aa8",
+   "id": "b04a6e1d",
    "metadata": {},
    "outputs": [],
    "source": []
