--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d0d052ae",
+   "id": "c99140b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "30f56d02",
+   "id": "98f7c747",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2d557052",
+   "id": "578f44c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ee8d2421",
+   "id": "c1fdb87b",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0c4f3a97",
+   "id": "47ef07f3",
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +83,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "a24b158b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average(values):\n",
+    "    if len(values) == 0:\n",
+    "        return(none)\n",
+    "    return sum(values)/len(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b04a6e1d",
+   "id": "9b950c38",
    "metadata": {},
    "outputs": [],
    "source": []
