--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c99140b4",
+   "id": "d1ad6c09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "98f7c747",
+   "id": "cafebab6",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "578f44c4",
+   "id": "ff04d343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c1fdb87b",
+   "id": "2664b910",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "47ef07f3",
+   "id": "17bb6501",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a24b158b",
+   "id": "cbc4fc36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +96,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "7473671b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(average([2, 3, 8]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9b950c38",
+   "id": "6f9a3a3d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mean = average([2,3,8])\n",
+    "\n",
+    "print(mean)"
+   ]
   }
  ],
  "metadata": {
