--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1ad6c09",
+   "id": "a02f93f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cafebab6",
+   "id": "db6dd272",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ff04d343",
+   "id": "b57cd2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2664b910",
+   "id": "818b7e86",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "17bb6501",
+   "id": "09c73661",
    "metadata": {},
    "outputs": [
     {
@@ -83,10 +83,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cbc4fc36",
+   "execution_count": 16,
+   "id": "5694eaea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'none' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21maverage\u001b[39m(values\u001b[38;5;241m=\u001b[39m\u001b[43mnone\u001b[49m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(values) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m(none)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'none' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def average(values):\n",
     "    if len(values) == 0:\n",
@@ -96,8 +108,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "0096e3d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "average() missing 1 required positional argument: 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43maverage\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: average() missing 1 required positional argument: 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "print(average())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
-   "id": "7473671b",
+   "id": "a7f32606",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f9a3a3d",
+   "id": "c8a2491f",
    "metadata": {},
    "outputs": [],
    "source": [
