--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f92a70cf",
+   "id": "91cefda0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f51eacfe",
+   "id": "0ecf7392",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fa019c17",
+   "id": "1f777577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56c3e34a",
+   "id": "a11b9016",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bf00f121",
+   "id": "bd81bb32",
    "metadata": {},
    "outputs": [
     {
@@ -83,34 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "fca0b055",
+   "execution_count": 31,
+   "id": "fd84732a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def average(values=[]):\n",
     "    if len(values) == 0:\n",
-    "        return(none)\n",
-    "    else:\n",
-    "        return sum(values)/len(values)"
+    "        return(None)\n",
+    "    return sum(values)/len(values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e039b160",
+   "execution_count": 32,
+   "id": "89661fc6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'none' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43maverage\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[0;32mIn [25]\u001b[0m, in \u001b[0;36maverage\u001b[0;34m(values)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21maverage\u001b[39m(values\u001b[38;5;241m=\u001b[39m[]):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(values) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 3\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m(\u001b[43mnone\u001b[49m)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28msum\u001b[39m(values)\u001b[38;5;241m/\u001b[39m\u001b[38;5;28mlen\u001b[39m(values)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'none' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
      ]
     }
    ],
@@ -121,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8abc747c",
+   "id": "9c9664af",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "62550ae6",
+   "id": "5dc31175",
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +152,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "db5e5602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average([])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4809e1f4",
+   "id": "f52c4124",
    "metadata": {},
    "outputs": [],
    "source": []
