--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "91cefda0",
+   "id": "303183a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ecf7392",
+   "id": "bce79e84",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1f777577",
+   "id": "1247869c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a11b9016",
+   "id": "63e3eb01",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bd81bb32",
+   "id": "c1d07126",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "fd84732a",
+   "id": "ec6c5686",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "89661fc6",
+   "id": "7f1d95ec",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9c9664af",
+   "id": "bf172c48",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "5dc31175",
+   "id": "b221e17d",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "db5e5602",
+   "id": "48e352a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,10 +163,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f52c4124",
+   "id": "2be03e78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def min_in_data(____):\n",
+    "    data = ____\n",
+    "    return ____"
+   ]
   }
  ],
  "metadata": {
