--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "303183a2",
+   "id": "0e1b43d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bce79e84",
+   "id": "7571ce4a",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1247869c",
+   "id": "e3dbceb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "63e3eb01",
+   "id": "184f8117",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c1d07126",
+   "id": "8eedc523",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ec6c5686",
+   "id": "e02fb7fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7f1d95ec",
+   "id": "41bb7fed",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bf172c48",
+   "id": "6d51cdc7",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b221e17d",
+   "id": "9cbdd852",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "48e352a0",
+   "id": "c853c22a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,15 +163,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2be03e78",
+   "id": "a4a94c37",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def min_in_data(____):\n",
-    "    data = ____\n",
-    "    return ____"
+    "def min_in_data(filename):\n",
+    "    data = pd.read_csv(filename)\n",
+    "    return data.min()"
    ]
   }
  ],
