--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0e1b43d1",
+   "id": "5320e28e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7571ce4a",
+   "id": "fb7fc467",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e3dbceb6",
+   "id": "6e591c4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "184f8117",
+   "id": "6036941b",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8eedc523",
+   "id": "5f2b96b6",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e02fb7fc",
+   "id": "84926f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "41bb7fed",
+   "id": "b33c1692",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6d51cdc7",
+   "id": "f74cda46",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9cbdd852",
+   "id": "4146dabe",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c853c22a",
+   "id": "67d6e08b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4a94c37",
+   "execution_count": 34,
+   "id": "d1663a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +172,51 @@
     "def min_in_data(filename):\n",
     "    data = pd.read_csv(filename)\n",
     "    return data.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd260c10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "continent            Americas\n",
+      "country             Argentina\n",
+      "gdpPercap_1952    1397.717137\n",
+      "gdpPercap_1957    1544.402995\n",
+      "gdpPercap_1962    1662.137359\n",
+      "gdpPercap_1967    1452.057666\n",
+      "gdpPercap_1972    1654.456946\n",
+      "gdpPercap_1977    1874.298931\n",
+      "gdpPercap_1982    2011.159549\n",
+      "gdpPercap_1987    1823.015995\n",
+      "gdpPercap_1992    1456.309517\n",
+      "gdpPercap_1997    1341.726931\n",
+      "gdpPercap_2002    1270.364932\n",
+      "gdpPercap_2007    1201.637154\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min_in_data(\"data/gapminder_gdp_americas.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cc9a665",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = glob.glob(data/*.csv)\n",
+    "\n",
+    "for filename in filenames:\n",
+    "    "
    ]
   }
  ],
