--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "729cf434",
+   "id": "1a48a1d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a94cff2",
+   "id": "d6ff5e4e",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a781ea1e",
+   "id": "8600c636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d73d3f4",
+   "id": "801bb864",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6a0b63e9",
+   "id": "c698f314",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "913d9df8",
+   "id": "136effec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "28767d18",
+   "id": "e2dfa10b",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "f811939c",
+   "id": "4123a290",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "eac0e7ac",
+   "id": "1e70305d",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "065129b4",
+   "id": "87537a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "cd04baa0",
+   "execution_count": 41,
+   "id": "d71ccfa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,13 +171,13 @@
     "\n",
     "def min_in_data(filename):\n",
     "    data = pd.read_csv(filename)\n",
-    "    return data.min()"
+    "    return data.min(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "5ef5c33c",
+   "execution_count": 42,
+   "id": "abb97dc6",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "9d7ecc83",
+   "id": "a9c61883",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187d6ca1",
+   "id": "4ab3cc8c",
    "metadata": {},
    "outputs": [],
    "source": []
