--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a65eeb69",
+   "id": "b59c6c6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b83b8c39",
+   "id": "d2e40806",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c1ce3cf",
+   "id": "6c00389c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5793b16c",
+   "id": "e731e3b9",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3fe91707",
+   "id": "fd11a71b",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "938d5703",
+   "id": "b36a7192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "756baea3",
+   "id": "ddc23e29",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c747e597",
+   "id": "24201bc4",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f6b06a9d",
+   "id": "41a78a4d",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b35a0b0d",
+   "id": "5dca4443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,21 +163,23 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "6507f2d2",
+   "id": "764a1af5",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def min_in_data(filename):\n",
+    "def min_in_data(filename,):\n",
     "    data = pd.read_csv(filename)\n",
-    "    return data[\"gdpPercap_1952\"].min()"
+    "    \n",
+    "    min_per_year = data.min()\n",
+    "    return min(min_per_year)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b45b4e04",
+   "id": "135ebe89",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f263047a",
+   "id": "e220d540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "478fa6ee",
+   "id": "b64ac51e",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7d69f9e",
+   "id": "bd9dcd7e",
    "metadata": {},
    "outputs": [],
    "source": []
