--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b59c6c6c",
+   "id": "e6e153ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2e40806",
+   "id": "b7d564fb",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6c00389c",
+   "id": "e458aef1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e731e3b9",
+   "id": "31a9b28d",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fd11a71b",
+   "id": "38d30e60",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b36a7192",
+   "id": "403d1e88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ddc23e29",
+   "id": "e4ddca0a",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "24201bc4",
+   "id": "2e3df817",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "41a78a4d",
+   "id": "e89dc231",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5dca4443",
+   "id": "f29cfaa1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,31 +162,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "764a1af5",
+   "execution_count": 52,
+   "id": "1bf813d0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def min_in_data(filename,):\n",
-    "    data = pd.read_csv(filename)\n",
+    "def min_in_data(filename):\n",
+    "    data = pd.read_csv(filename, index_col=\"country\")\n",
     "    \n",
-    "    min_per_year = data.min()\n",
-    "    return min(min_per_year)"
+    "    min_per_year = list(data.min())\n",
+    "    return (min_per_year))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "135ebe89",
+   "execution_count": 53,
+   "id": "fa1c8002",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1397.717137\n"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'min'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [53]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmin_in_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/gapminder_gdp_americas.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "Input \u001b[0;32mIn [52]\u001b[0m, in \u001b[0;36mmin_in_data\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filename, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcountry\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m min_per_year \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(data\u001b[38;5;241m.\u001b[39mmin())\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[43mmin_per_year\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m())\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'min'"
      ]
     }
    ],
@@ -197,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e220d540",
+   "id": "08e8e3b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b64ac51e",
+   "id": "1965d7f8",
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd9dcd7e",
+   "id": "feb226ea",
    "metadata": {},
    "outputs": [],
    "source": []
