--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e6e153ae",
+   "id": "7f7fb515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b7d564fb",
+   "id": "d2f6a01e",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e458aef1",
+   "id": "473ce488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31a9b28d",
+   "id": "45c6ae94",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "38d30e60",
+   "id": "0bb5542a",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "403d1e88",
+   "id": "1c5a0aa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "e4ddca0a",
+   "id": "8475ddc6",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2e3df817",
+   "id": "d1766d57",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e89dc231",
+   "id": "93427e35",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f29cfaa1",
+   "id": "0240cd9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "1bf813d0",
+   "execution_count": 60,
+   "id": "f431b288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,27 +171,23 @@
     "\n",
     "def min_in_data(filename):\n",
     "    data = pd.read_csv(filename, index_col=\"country\")\n",
-    "    \n",
-    "    min_per_year = list(data.min())\n",
-    "    return (min_per_year))"
+    "     \n",
+    "    min_per_year = list(data.min())[1:]\n",
+    "\n",
+    "    return min(min_per_year)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "fa1c8002",
+   "execution_count": 61,
+   "id": "a2e52829",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'min'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [53]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmin_in_data\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/gapminder_gdp_americas.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
-      "Input \u001b[0;32mIn [52]\u001b[0m, in \u001b[0;36mmin_in_data\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(filename, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcountry\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m min_per_year \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(data\u001b[38;5;241m.\u001b[39mmin())\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[43mmin_per_year\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m())\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'min'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1201.637154\n"
      ]
     }
    ],
@@ -202,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "08e8e3b3",
+   "id": "eea4e0b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1965d7f8",
+   "id": "99a52d08",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb226ea",
+   "id": "47aa1680",
    "metadata": {},
    "outputs": [],
    "source": []
