--- a/Writing_functions.ipynb
+++ b/Writing_functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f7fb515",
+   "id": "680e13f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d2f6a01e",
+   "id": "c0606613",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "473ce488",
+   "id": "0b8010be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "45c6ae94",
+   "id": "00f70603",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0bb5542a",
+   "id": "3fb85973",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1c5a0aa6",
+   "id": "fd7f2113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8475ddc6",
+   "id": "ac7bf12c",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d1766d57",
+   "id": "eb8e10b0",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "93427e35",
+   "id": "7ac367bb",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0240cd9b",
+   "id": "39e7fa52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f431b288",
+   "id": "dee7b74c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
     "def min_in_data(filename):\n",
     "    data = pd.read_csv(filename, index_col=\"country\")\n",
     "     \n",
-    "    min_per_year = list(data.min())[1:]\n",
+    "    min_per_year = list(data.idxmin())[1:]\n",
     "\n",
     "    return min(min_per_year)"
    ]
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a2e52829",
+   "id": "91003405",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "eea4e0b5",
+   "id": "34c7d4c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,20 +207,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "99a52d08",
+   "execution_count": 62,
+   "id": "5c5534e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1397.717137\n",
-      "973.5331948\n",
-      "298.8462121\n",
-      "10039.59564\n",
-      "298.8462121\n",
-      "331.0\n"
+      "1201.637154\n",
+      "1353.989176\n",
+      "23.599\n",
+      "10949.64959\n",
+      "241.1658765\n",
+      "347.0\n"
      ]
     }
    ],
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47aa1680",
+   "id": "ebca8dac",
    "metadata": {},
    "outputs": [],
    "source": []
